Added missing util install dependency. Now also removes package-specific directories on deinstall.

--- a/array/build.xml
+++ b/array/build.xml
@@ -181,7 +181,8 @@
    !-->
   <extclasspath id="installed.classpath">
 
-    <!-- ARRAY needs no external classes -->
+    <!-- Util -->
+    <pathelement location="${star.jar.dir}/util/util.jar"/>
 
   </extclasspath>
 
@@ -203,7 +204,7 @@
    !-->
   <extclasspath id="built.jarpath">
 
-    <!-- ARRAY needs no external classes -->
+    <pathelement location="${star.build.dir}/util/lib/util/util.jar"/>
 
   </extclasspath>
 
@@ -619,7 +620,7 @@
    ! directories.
    !
    ! An installed system is potentially "undoable" as the copied names
-   ! are logged to "${install.log}".
+   ! and package-specific directories are logged to "${install.log}".
    !-->
   <target name="install"
           depends="dist"
@@ -641,13 +642,18 @@
     <loggedcopy todir="${star.lib}"
                 logfile="${install.log}"
                 overwrite="${install.overwrite}"
-                logfileAppend="true">
+                logfileAppend="false">
       <fileset dir="${dist.lib}">
         <include name="**/*.jar"/>
         <include name="**/*.zip"/>
         <include name="**/*.so"/>
       </fileset>
     </loggedcopy>
+
+    <!-- Also remove the package-specific directory. 
+     !   Note exact format is required.-->
+    <echo file="${install.log}" append="true">${star.lib.pkg}
+</echo>
 
     <loggedcopy todir="${star.docs}"
                 logfile="${install.log}"
@@ -663,6 +669,9 @@
                 logfileAppend="true">
       <fileset dir="${dist.docs}" includes="${unfiltered.files}"/>
     </loggedcopy>
+    <echo file="${install.log}" append="true">${star.docs.pkg}
+</echo>
+
 
   </target>
 
