--- a/hds/build.xml
+++ b/hds/build.xml
@@ -178,6 +178,9 @@
 
     <!-- JNIHDS -->
     <pathelement location="${star.jar.dir}/jnihds/jnihds.jar"/>
+
+    <!-- NDX -->
+    <pathelement location="${star.jar.dir}/ndx/ndx.jar"/>
     
   </extclasspath>
 
@@ -233,13 +236,13 @@
 
   <!-- Unification of all classpaths using extra, built, installed order-->
   <path id="classpath">
-    <path refid="local.classpath"/>
+     <path refid="local.classpath"/>
      <path refid="built.classpath"/>
      <path refid="installed.classpath"/>
   </path>
 
   <!-- JUnit tests classpath -->
- <path id="tests-classpath">
+  <path id="tests-classpath">
     <pathelement location="${build.classes}"/>
     <pathelement location="${build.tests}"/>
     <pathelement location="${tests.dir}"/>
@@ -566,7 +569,7 @@
    ! directories. 
    !
    ! An installed system is potentially "undoable" as the copied names
-   ! are logged to "${install.log}".
+   ! and package-specific directories are logged to "${install.log}".
    !-->
   <target name="install"
           depends="dist"
@@ -595,6 +598,11 @@
       </fileset>
     </loggedcopy>
 
+    <!-- Also remove the package-specific directory. 
+     !   Note exact format is required.-->
+   <echo file="${install.log}" append="true">${star.lib.pkg}
+</echo>
+
     <loggedcopy todir="${star.docs}"
                 logfile="${install.log}"
                 overwrite="${install.overwrite}"
@@ -609,6 +617,9 @@
                 logfileAppend="true">
       <fileset dir="${dist.docs}" includes="${unfiltered.files}"/>
     </loggedcopy>
+
+    <echo file="${install.log}" append="true">${star.docs.pkg}
+</echo>
 
   </target>
 
