--- a/sog/build.xml
+++ b/sog/build.xml
@@ -354,6 +354,7 @@
         <token key="TIME" value="${TSTAMP}"/>
       </replacetokens>
     </filterchain>
+
   </target>
 
 
@@ -653,7 +654,7 @@
    ! directories.
    !
    ! An installed system is potentially "undoable" as the copied names
-   ! are logged to "${install.log}".
+   ! and package-specific directories are logged to "${install.log}".
    !-->
   <target name="install"
           depends="dist"
@@ -680,6 +681,11 @@
                 logfileAppend="false">
       <fileset dir="${dist.bin}"/>
     </loggedcopy>
+  
+    <!-- Also remove the package-specific directory. 
+     !   Note exact format is required.-->
+    <echo file="${install.log}" append="true">${star.bin.pkg}
+</echo>
 
     <chmod perm="ugo+rx" failonerror="${chmod.fail}">
       <fileset dir="${star.bin}">
@@ -696,6 +702,8 @@
         <include name="**/*.zip"/>
       </fileset>
     </loggedcopy>
+    <echo file="${install.log}" append="true">${star.lib.pkg}
+</echo>
 
     <loggedcopy todir="${star.docs}"
                 logfile="${install.log}"
@@ -711,6 +719,8 @@
                 logfileAppend="true">
       <fileset dir="${dist.docs}" includes="${unfiltered.files}"/>
     </loggedcopy>
+    <echo file="${install.log}" append="true">${star.docs.pkg}
+</echo>
 
   </target>
 
