--- a/splat/build.xml
+++ b/splat/build.xml
@@ -727,7 +727,7 @@ value="bsh-1.1a18.jar colt.jar diva.jar jdom.jar jhall.jar
    ! directories.
    !
    ! An installed system is potentially "undoable" as the copied names
-   ! are logged to "${install.log}".
+   ! and package-specific directories are logged to "${install.log}".
    !-->
   <target name="install"
           depends="dist"
@@ -756,6 +756,11 @@ value="bsh-1.1a18.jar colt.jar diva.jar jdom.jar jhall.jar
       <fileset dir="${dist.bin}"/>
     </loggedcopy>
 
+    <!-- Also remove the package-specific directory. 
+     !   Note exact format is required.-->
+    <echo file="${install.log}" append="true">${star.bin.pkg}
+</echo>
+
     <chmod perm="ugo+rx" failonerror="${chmod.fail}">
       <fileset dir="${star.bin}">
         <present targetdir="${dist.bin}" present="both"/>
@@ -772,6 +777,8 @@ value="bsh-1.1a18.jar colt.jar diva.jar jdom.jar jhall.jar
         <include name="**/libsplat.*"/>
       </fileset>
     </loggedcopy>
+    <echo file="${install.log}" append="true">${star.lib.pkg}
+</echo>
 
     <loggedcopy todir="${star.docs}"
                 logfile="${install.log}"
@@ -787,6 +794,8 @@ value="bsh-1.1a18.jar colt.jar diva.jar jdom.jar jhall.jar
                 logfileAppend="true">
       <fileset dir="${dist.docs}" includes="${unfiltered.files}"/>
     </loggedcopy>
+    <echo file="${install.log}" append="true">${star.docs.pkg}
+</echo>
 
   </target>
 
