--- a/hdx/build.xml
+++ b/hdx/build.xml
@@ -647,7 +647,7 @@
    ! directories. 
    !
    ! An installed system is potentially "undoable" as the copied names
-   ! are logged to "${install.log}".
+   ! and package-specific directories are logged to "${install.log}".
    !-->
   <target name="install"
           depends="dist"
@@ -691,6 +691,11 @@
       </fileset>
     </loggedcopy>
 
+    <!-- Also remove the package-specific directory. 
+     !   Note exact format is required.-->
+    <echo file="${install.log}" append="true">${star.lib.pkg}
+</echo>
+
     <loggedcopy todir="${star.docs}"
                 logfile="${install.log}"
                 overwrite="${install.overwrite}"
@@ -705,6 +710,10 @@
                 logfileAppend="true">
       <fileset dir="${dist.docs}" includes="${unfiltered.files}"/>
     </loggedcopy>
+
+    <!-- Also remove the package-specific directory-->
+    <echo file="${install.log}" append="true">${star.docs.pkg}
+</echo>
 
   </target>
 
