Added some (optional) dependencies to build file.

--- a/array/build.xml
+++ b/array/build.xml
@@ -184,6 +184,12 @@
     <!-- Util -->
     <pathelement location="${star.jar.dir}/util/util.jar"/>
 
+    <!-- FITS - optional -->
+    <pathelement location="${star.jar.dir}/fits/fits.jar"/>
+
+    <!-- HDS - optional -->
+    <pathelement location="${star.jar.dir}/hds/hds.jar"/>
+
   </extclasspath>
 
   <!-- Generate the local build classpath. This is the most difficult
@@ -205,6 +211,8 @@
   <extclasspath id="built.jarpath">
 
     <pathelement location="${star.build.dir}/util/lib/util/util.jar"/>
+    <pathelement location="${star.build.dir}/fits/lib/fits/fits.jar"/>
+    <pathelement location="${star.build.dir}/hds/lib/hds/hds.jar"/>
 
   </extclasspath>
 
@@ -264,6 +272,12 @@
   <target name="check_packages"
           unless="runonly.install">
 
+    <!-- Need Util -->
+    <available property="util.present"
+               classpathref="classpath"
+               classname="uk.ac.starlink.util.GenericNioBuffer"/>
+    <fail message="No Util available" unless="util.present"/>
+
     <!-- Need JUnit for testcases, not essential -->
     <condition property="testframework.present">
       <and>
@@ -273,6 +287,9 @@
                    classname="uk.ac.starlink.util.TestCase"/>
       </and>
     </condition>
+
+    <!-- HDS and FITS, while desirable, are not required 
+         (they are installed at runtime if present) -->
 
   </target>
 
@@ -409,7 +426,6 @@
       </manifest>
     </jar>
 
-    <mkdir dir="${build.lib}"/>
     <zip destfile="${build.lib}/${name}_src.zip" basedir="${build.java}"/>
 
   </target>
